[package]
name = "jcole"
version = "0.0.1"
edition = "2021"
description = "A fun little project with lyrics in J.Cole's songs"
repository = "https://github.com/irfanzainudin/jcole"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.30.0"
